# DiffCSE

./: Dockerfile  README.md  config_bert.yaml  dataset.py  model.py  pyproject.toml  train.py  utils.py
tensorflow/: Dockerfile
torch/: Dockerfile  config.yaml  dataset.py  handler.py  model.py
